--- a/dashboard.html
+++ b/dashboard.html
@@ -120,7 +120,7 @@
       <tbody id="exportTable"></tbody>
     </table>
   <!-- Bảng Thu Chi Tồn -->
-  <h3 class="text-lg font-semibold mb-2">Danh sách Thu - Chi</h3>
+  <h3 class="text-lg font-semibold mb-2 mt-6">Danh sách Thu - Chi</h3>
   <table class="w-full border text-sm">
     <thead class="bg-gray-100">
       <tr>
