--- a/dashboard.html
+++ b/dashboard.html
@@ -235,83 +235,8 @@
       return items;
     }
 
-    window.saveImport = function () {
-      const name = $("#customerName").val() || "Không cung cấp";
-      const address = $("#address").val() || "Không cung cấp";
-      const cccd = $("#cccd").val() || "Không cung cấp";
-      const phone = $("#phone").val() || "Không cung cấp";
-      const items = getValidItems("importItems");
-      if (!items.length) return alert("Chưa có mặt hàng hợp lệ!");
-      saveRecord("imports", { name, address, cccd, phone, items });
-    }
-
-    window.saveExport = function () {
-      const name = $("#receiverName").val() || "Không cung cấp";
-      const phone = $("#receiverPhone").val() || "Không cung cấp";
-      const items = getValidItems("exportItems");
-      if (!items.length) return alert("Chưa có mặt hàng hợp lệ!");
-      saveRecord("exports", { name, phone, items });
-    }
-
-    function saveRecord(type, data) {
-      const total = data.items.reduce((sum, i) => sum + i.quantity * i.price, 0);
-      const now = new Date().toISOString();
-
-      if (currentEditId && currentEditType === type) {
-        db.ref(`${type}/${currentEditId}`).update({ ...data, total, date: now }).then(() => {
-          alert("Đã cập nhật phiếu thành công!");
-          currentEditId = null;
-          currentEditType = null;
-          location.reload();
-        });
-      } else {
-        db.ref(type).once("value").then(snap => {
-          const count = snap.numChildren() + 1;
-          const id = (type === "imports" ? "PNK" : "PXK") + String(count).padStart(3, "0");
-          db.ref(`${type}/${id}`).set({ id, date: now, ...data, total }).then(() => location.reload());
-        });
-      }
-    }
-
-    function loadTable(type, tableId) {
-      const tbody = $("#" + tableId);
-      db.ref(type).on("value", snap => {
-        tbody.empty();
-        let index = 1;
-        snap.forEach(child => {
-          const d = child.val();
-          const row = `
-            <tr class="cursor-pointer hover:bg-gray-100" onclick='showModal(${JSON.stringify(d)}, "${type}")'>
-              <td class="border px-2 py-1">${index++}</td>
-              <td class="border px-2 py-1">${new Date(d.date).toLocaleDateString()}</td>
-              <td class="border px-2 py-1">${d.name}</td>
-              <td class="border px-2 py-1 text-center">${d.items.length}</td>
-              <td class="border px-2 py-1 text-right">${Number(d.total).toLocaleString()}</td>
-            </tr>
-          `;
-          tbody.append(row);
-        });
-      });
-    }
-
-    window.showModal = function (data, type) {
-      currentModalData = data;
-      currentModalType = type;
-      const lines = [`Mã phiếu: ${data.id}`, `Ngày: ${new Date(data.date).toLocaleDateString()}`, `Người: ${data.name}`, `Tổng tiền: ${Number(data.total).toLocaleString()} đ`, "--- Mặt hàng ---"];
-      data.items.forEach((i, idx) => {
-        lines.push(`${idx + 1}. ${i.name} - ${i.quantity} ${i.unit} x ${i.price} = ${(i.quantity * i.price).toLocaleString()} đ`);
-      });
-      $("#modalTitle").text(`Chi tiết ${data.id}`);
-      $("#modalContent").text(lines.join("\n"));
-      $("#detailModal").removeClass("hidden");
-    }
-
-    window.closeModal = function () {
-      currentModalData = null;
-      $("#detailModal").addClass("hidden");
-    }
-
     window.saveIncome = function () {
+      const id = $('#cashflowId').val();
       const data = {
         type: 'thu',
         amount: parseFloat($('#incomeAmount').val()) || 0,
@@ -321,13 +246,17 @@
         note: $('#incomeNote').val() || '',
         date: new Date().toISOString()
       };
-      db.ref('cashflow').push(data).then(() => {
+      const ref = id ? db.ref('cashflow/' + id) : db.ref('cashflow').push();
+      ref.set(data).then(() => {
         loadCashflow();
         $('#incomeForm input, #incomeForm textarea, #incomeForm select').val('');
+        $('#cashflowId').val('');
+        toggleForm('');
       });
     }
 
     window.saveExpense = function () {
+      const id = $('#cashflowId').val();
       const data = {
         type: 'chi',
         amount: parseFloat($('#expenseAmount').val()) || 0,
@@ -336,10 +265,72 @@
         note: $('#expenseNote').val() || '',
         date: new Date().toISOString()
       };
-      db.ref('cashflow').push(data).then(() => {
+      const ref = id ? db.ref('cashflow/' + id) : db.ref('cashflow').push();
+      ref.set(data).then(() => {
         loadCashflow();
         $('#expenseForm input, #expenseForm textarea, #expenseForm select').val('');
+        $('#cashflowId').val('');
+        toggleForm('');
       });
+    }
+
+    window.showCashflowModal = function (id) {
+      db.ref('cashflow/' + id).once('value').then(snap => {
+        const d = snap.val();
+        currentModalData = d;
+        currentEditId = id;
+        const lines = [
+          `Loại phiếu: ${d.type === 'thu' ? 'Thu' : 'Chi'}`,
+          `Ngày: ${new Date(d.date).toLocaleDateString()}`,
+          `Số tiền: ${Number(d.amount).toLocaleString()} đ`,
+          d.type === 'thu' ? `Người gửi: ${d.sender}` : `Nội dung: ${d.content}`,
+          `Nguồn: ${d.source}`,
+          `Ghi chú: ${d.note}`
+        ];
+        $('#modalTitle').text(`Chi tiết phiếu ${d.type === 'thu' ? 'thu' : 'chi'}`);
+        $('#modalContent').text(lines.join("\n"));
+        $('#modalEditBtn').off().on('click', () => editCashflow(id));
+        $('#modalDeleteBtn').off().on('click', () => deleteCashflow(id));
+        $('#detailModal').removeClass('hidden');
+      });
+    }
+
+    window.closeModal = function () {
+      currentModalData = null;
+      currentEditId = null;
+      $('#detailModal').addClass('hidden');
+    }
+
+    window.editCashflow = function (id) {
+      db.ref('cashflow/' + id).once('value').then(snap => {
+        const d = snap.val();
+        $('#cashflowId').val(id);
+        if (d.type === 'thu') {
+          $('#incomeAmount').val(d.amount);
+          $('#incomeSender').val(d.sender);
+          $('#incomeSource').val(d.source);
+          $('#incomeContent').val(d.content);
+          $('#incomeNote').val(d.note);
+          toggleForm('incomeForm');
+        } else {
+          $('#expenseAmount').val(d.amount);
+          $('#expenseContent').val(d.content);
+          $('#expenseSource').val(d.source);
+          $('#expenseNote').val(d.note);
+          toggleForm('expenseForm');
+        }
+        closeModal();
+      });
+    }
+
+    window.deleteCashflow = function (id) {
+      if (confirm("Bạn có chắc muốn xoá phiếu này không?")) {
+        db.ref('cashflow/' + id).remove().then(() => {
+          alert("Đã xoá phiếu thành công!");
+          closeModal();
+          loadCashflow();
+        });
+      }
     }
 
     function loadCashflow() {
@@ -348,8 +339,9 @@
       db.ref('cashflow').orderByChild('date').once('value', snap => {
         snap.forEach(child => {
           const d = child.val();
+          const id = child.key;
           const row = `
-            <tr>
+            <tr class="cursor-pointer hover:bg-gray-100" onclick="showCashflowModal('${id}')">
               <td class="border px-2 py-1 text-center">${d.type === 'thu' ? 'Thu' : 'Chi'}</td>
               <td class="border px-2 py-1 text-center">${new Date(d.date).toLocaleString()}</td>
               <td class="border px-2 py-1 text-right">${Number(d.amount).toLocaleString()}</td>
@@ -364,6 +356,7 @@
     }
   });
 </script>
+
 
 
 
